--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/images/logoGif.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Zeerak Babar"
-    />
+    <meta name="description" content="Zeerak Babar" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap");
     </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logoGif.gif" />
     <!--
@@ -24,6 +21,20 @@
     -->
     <title>Zeerak Babar</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-5ZNBCQ8TBJ"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-5ZNBCQ8TBJ");
+  </script>
   <body id="bg-color">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
